--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,13 +6,16 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.4.3", features = ["derive"] }
-env_logger = "0.10.0"
+env_logger = { version = "0.10.0", default-features = false, features = [
+    "humantime",
+    "regex",
+] }
 inflections = "1.1"
 log = { version = "~0.4", features = ["std"] }
 quote = "1.0"
 proc-macro2 = "1.0"
 anyhow = "1.0.75"
 regex = "1.9.5"
-serde = { version = "1.0.188", features = [ "derive" ]}
+serde = { version = "1.0.188", features = ["derive"] }
 serde_yaml = "0.9.25"
 svd-parser = { version = "0.10.2", features = ["derive-from"] }
